fix alignments on gift form/views

--- a/src/main/resources/scss/enrollment/components/_gift-form.scss
+++ b/src/main/resources/scss/enrollment/components/_gift-form.scss
@@ -47,14 +47,24 @@
 		}
 	}
 
+	.form-panel {
+		margin: 0;
+		max-width: 100%;
+	}
+
 	.agreement {
 		background: $quad-grey;
 		padding: 0.5rem $pad;
-		margin: 0 (-$pad) 2rem;
+		margin: 0 (-($pad - 0.625rem)) 2rem;
 
 		label {
 			font-weight: 600;
 			font-size: 0.9rem;
+
+			span {
+				line-height: 1.5;
+				display: block;
+			}
 		}
 
 		a {
@@ -63,7 +73,7 @@
 	}
 
 	.button-row {
-		margin: 0 (-$pad);
+		margin: 0 (-($pad - 0.625rem)) 2rem;
 		text-align: right;
 		a {
 			padding: 0.7rem 2rem 0.7625rem;
@@ -90,13 +100,17 @@
 /* min-width 641px, medium screens */
 @media only screen and (min-width: 40.063em) {
 	.gift.enrollment {
-		margin: 1rem 4rem;
+		margin: 1rem auto;
+		max-width: 750px;
 
 		fieldset {
 			&.payment-fields {
 				max-width: 60%;
 			}
 
+			div.from {
+				min-width: 0;
+			}
 			div.fromLabel {
 				left: 42.32%;
 				right: 0;
