--- a/src/main/resources/scss/enrollment/components/_gift-info.scss
+++ b/src/main/resources/scss/enrollment/components/_gift-info.scss
@@ -1,3 +1,7 @@
+.gift-header {
+	margin: 0 0.625rem;
+}
+
 .gift-info {
 	$pad: 0.9375rem;
 	$gift-border: #d5f2da;
@@ -5,7 +9,7 @@
 
 	border: 1px solid $gift-border;
 	padding: 0 $pad;
-	margin: 0 (-$pad) 2rem;
+	margin: 0 (-($pad - 0.625rem)) 2rem;
 
 	label {
 		color: $secondary-green;
