--- a/src/main/resources/scss/enrollment/components/_pricing-info.scss
+++ b/src/main/resources/scss/enrollment/components/_pricing-info.scss
@@ -2,6 +2,7 @@
 .pricing-info {
 	color: $primary-grey;
 	margin-bottom: 2rem;
+	padding: 0 0.625rem;
 
 	.title {
 		.sub {
@@ -28,9 +29,12 @@
 	}
 
 	.info {
-		padding: 1rem 0.2rem;
+		padding: 1rem;
+		padding-left: 100rem !important;
+		padding-right: 100rem !important;
 		background: $quad-grey;
 		box-shadow: inset 0 1px 0 0 #eee;
+		margin: 0 -100rem;
 
 		.label {
 			background: none;
